--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Morgan Redrup, Nicolas Picha, Jack Dorner\n",
     "\n",
-    "FIXME: Write Introduction"
+    "The goal of this project is to practice benchmarking algorithms using the insertion and selection sorting algorithms. We will then plot the run times use the graph to interpt the asymptomic run times of the algorithms."
    ]
   },
   {
@@ -23,10 +23,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e39d73b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e9ab21c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insertion_sort(arr):\n",
+    "    for i in range(1, len(arr)):\n",
+    "        key = arr[i]\n",
+    "        j = i - 1\n",
+    "        while j >= 0 and arr[j] > key:\n",
+    "            arr[j + 1] = arr[j]\n",
+    "            j -= 1\n",
+    "        arr[j + 1] = key\n",
+    "    return arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +63,15 @@
    "id": "ed34d363",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Quick insertion sort tests\n",
+    "assert insertion_sort([]) == []\n",
+    "assert insertion_sort([1]) == [1]\n",
+    "assert insertion_sort([1, 2]) == [1, 2]\n",
+    "assert insertion_sort([3, 1, 2]) == [1, 2, 3]\n",
+    "assert insertion_sort([5,4,3,2,1]) == [1,2,3,4,5]\n",
+    "print('Insertion sort tests passed')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +87,18 @@
    "id": "f4a15a67",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def selection_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n - 1):\n",
+    "        min_idx = i\n",
+    "        for j in range(i + 1, n):\n",
+    "            if arr[j] < arr[min_idx]:\n",
+    "                min_idx = j\n",
+    "        if min_idx != i:\n",
+    "            arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "    return arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,7 +114,15 @@
    "id": "ee844feb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Quick selection sort tests\n",
+    "assert selection_sort([]) == []\n",
+    "assert selection_sort([1]) == [1]\n",
+    "assert selection_sort([1, 2]) == [1, 2]\n",
+    "assert selection_sort([3, 1, 2]) == [1, 2, 3]\n",
+    "assert selection_sort([5,4,3,2,1]) == [1,2,3,4,5]\n",
+    "print('Selection sort tests passed')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,7 +138,28 @@
    "id": "a0a08b98",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def benchmark(sorting_func, input_list):\n",
+    "    # Copy the input so the original list remains unchanged\n",
+    "    arr = input_list.copy()\n",
+    "    start = time.perf_counter()\n",
+    "    sorting_func(arr)\n",
+    "    end = time.perf_counter()\n",
+    "    return end - start\n",
+    "\n",
+    "def get_array(size, order='random'):\n",
+    "    import random\n",
+    "    if order == 'random':\n",
+    "        return [random.randint(0, size) for _ in range(size)]\n",
+    "    elif order == 'sorted':\n",
+    "        return list(range(size))\n",
+    "    elif order == 'reversed':\n",
+    "        return list(range(size, 0, -1))\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown order type\")\n",
+    "\n",
+    "sizes_arr = [1, 10, 100, 1000, 10000, 100000, 1000000, 10000000]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,7 +175,14 @@
    "id": "3bb365f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_best_insertion = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='sorted')\n",
+    "    elapsed_time = benchmark(insertion_sort, arr)\n",
+    "    time_best_insertion.append(elapsed_time)\n",
+    "    print(f'Insertion sort best case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,7 +198,14 @@
    "id": "fcdc870d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_avg_insertion = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='random')\n",
+    "    elapsed_time = benchmark(insertion_sort, arr)\n",
+    "    time_avg_insertion.append(elapsed_time)\n",
+    "    print(f'Insertion sort average case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,7 +221,14 @@
    "id": "d489478a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_worst_insertion = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='reversed')\n",
+    "    elapsed_time = benchmark(insertion_sort, arr)\n",
+    "    time_worst_insertion.append(elapsed_time)\n",
+    "    print(f'Insertion sort worst case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,7 +244,14 @@
    "id": "283a009c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_best_selection = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='sorted')\n",
+    "    elapsed_time = benchmark(selection_sort, arr)\n",
+    "    time_best_selection.append(elapsed_time)\n",
+    "    print(f'Selection sort best case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +267,14 @@
    "id": "ada2c04c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_avg_selection = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='random')\n",
+    "    elapsed_time = benchmark(selection_sort, arr)\n",
+    "    time_avg_selection.append(elapsed_time)\n",
+    "    print(f'Selection sort average case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +290,14 @@
    "id": "cf52b66e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_worst_selection = []\n",
+    "for size in sizes_arr:\n",
+    "    arr = get_array(size, order='reversed')\n",
+    "    elapsed_time = benchmark(selection_sort, arr)\n",
+    "    time_worst_selection.append(elapsed_time)\n",
+    "    print(f'Selection sort worst case size {size}: {elapsed_time:.6f} seconds')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +313,16 @@
    "id": "3e34c63e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(sizes_arr, time_best_insertion, label=\"best\")\n",
+    "plt.plot(sizes_arr, time_avg_insertion, label=\"average\")\n",
+    "plt.plot(sizes_arr, time_worst_insertion, label=\"worst\")\n",
+    "plt.xlabel(\"List Size\", fontsize=18)\n",
+    "plt.ylabel(\"Run Time (s)\", fontsize=18)\n",
+    "plt.title(\"Insertion Sort\", fontsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,7 +338,16 @@
    "id": "28071ff9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(sizes_arr, time_best_selection, label=\"best\")\n",
+    "plt.plot(sizes_arr, time_avg_selection, label=\"average\")\n",
+    "plt.plot(sizes_arr, time_worst_selection, label=\"worst\")\n",
+    "plt.xlabel(\"List Size\", fontsize=18)\n",
+    "plt.ylabel(\"Run Time (s)\", fontsize=18)\n",
+    "plt.title(\"Selection Sort\", fontsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,7 +363,47 @@
    "id": "d20ebcf6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(sizes_arr, time_best_insertion, label=\"insertion\")\n",
+    "plt.plot(sizes_arr, time_best_selection, label=\"selection\")\n",
+    "plt.xlabel(\"List Size\", fontsize=18)\n",
+    "plt.ylabel(\"Run Time (s)\", fontsize=18)\n",
+    "plt.title(\"Insertion/Selection Best Case\", fontsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df47245a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sizes_arr, time_avg_insertion, label=\"insertion\")\n",
+    "plt.plot(sizes_arr, time_avg_selection, label=\"selection\")\n",
+    "plt.xlabel(\"List Size\", fontsize=18)\n",
+    "plt.ylabel(\"Run Time (s)\", fontsize=18)\n",
+    "plt.title(\"Insertion/Selection Average Case\", fontsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec88e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sizes_arr, time_worst_insertion, label=\"insertion\")\n",
+    "plt.plot(sizes_arr, time_worst_selection, label=\"selection\")\n",
+    "plt.xlabel(\"List Size\", fontsize=18)\n",
+    "plt.ylabel(\"Run Time (s)\", fontsize=18)\n",
+    "plt.title(\"Insertion/Selection Worst Case\", fontsize=20)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,8 +433,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
