--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -158,7 +158,7 @@
     "    else:\n",
     "        raise ValueError(\"Unknown order type\")\n",
     "\n",
-    "sizes_arr = [1, 10, 100, 1000, 10000, 100000, 1000000, 10000000]"
+    "sizes_arr = [10, 100, 1000, 5000, 10000, 50000, 100000]"
    ]
   },
   {
@@ -406,6 +406,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf865147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import linregress\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_best_insertion))\n",
+    "print(f'Insertion Best Case m = {m:.6f}, b = {b:.6f}')\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_avg_insertion))\n",
+    "print(f'Insertion Average Case m = {m:.6f}, b = {b:.6f}')\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_worst_insertion))\n",
+    "print(f'Insertion Worst Case m = {m:.6f}, b = {b:.6f}')\n",
+    "\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_best_selection))\n",
+    "print(f'Selection Best Case m = {m:.6f}, b = {b:.6f}')\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_avg_selection))\n",
+    "print(f'Selection Average Case m = {m:.6f}, b = {b:.6f}')\n",
+    "m, b, _, _, _ = linregress(np.log(sizes_arr), np.log(time_worst_selection))\n",
+    "print(f'Selection Worst Case m = {m:.6f}, b = {b:.6f}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37ccd779",
    "metadata": {},
@@ -414,6 +438,8 @@
     "\n",
     "Create a table of the theoretical and estimated run time functions for the 6 combinations (2 algorithms, 3 cases). Do\n",
     "your estimates match the theory? If not, you may have made a mistake somewhere.\n",
+    "\n",
+    "\n",
     "\n",
     "Which algorithm had a better run time than the other and for which case(s)? Why do you think that one case was\n",
     "substantially faster for that algorithm? (Hint: focus on the inner loops.)\n",
